Add why choose us section

--- a/index.html
+++ b/index.html
@@ -171,9 +171,109 @@
                     </div>
                     <div class="col-12">
                         <!-- total 8 cards -->
-                        <div class="row choose">
-
-                            
+                        <div class="row choose choose-us-container">
+                            <div class="col-lg-3 col-md-6 col-12">
+                                <div class="choose-card text-center mb-3">
+                                    <div class="choose-icon">
+                                        <img src="./assets/images/quality.png" class="img-fluid" alt="choose-icon"
+                                            width="76px">
+                                    </div>
+                                    <h4 class="fw-semibold fs-5 text-capitalize">high quality syllabus</h4>
+                                    <p class="fw-normal">The Syllabus is comprehensively designed, keeping the
+                                        industry standards under the watchful eye
+                                        of industry experts</p>
+                                </div>
+                            </div>
+                            <div class="col-lg-3 col-md-6 col-12">
+                                <div class="choose-card text-center mb-3">
+                                    <div class="choose-icon ">
+                                        <img src="./assets/images/hands.png" class="img-fluid" alt="choose-icon"
+                                            width="100" height="100">
+                                    </div>
+                                    <h4 class="fw-semibold fs-5 text-capitalize"> Hands on training </h4>
+                                    <p class="fw-normal">Our expert trainers provide the students with hands-on live
+                                        projects under their supervision to
+                                        give them disclosure of performing different jobs in the industry. </p>
+                                </div>
+                            </div>
+                            <div class="col-lg-3 col-md-6 col-12">
+                                <div class="choose-card text-center mb-3">
+                                    <div class="choose-icon">
+                                        <img src="./assets/images/trainers.png" class="img-fluid" alt="choose-icon"
+                                            width="100" height="100">
+                                    </div>
+                                    <h4 class="fw-semibold fs-5 text-capitalize">Well Experienced Trainers</h4>
+                                    <p class="fw-normal"> We have the most skilled and specialized trainers who
+                                        provide outstanding mentorship to each
+                                        student to help them flourish in their careers</p>
+                                </div>
+                            </div>
+                            <div class="col-lg-3 col-md-6 col-12">
+                                <div class="choose-card text-center mb-3">
+                                    <div class="choose-icon">
+                                        <img src="./assets/images/placements.png" class="img-fluid" alt="choose-icon"
+                                            width="100" height="100">
+                                    </div>
+                                    <h4 class="fw-semibold fs-5 text-capitalize"> Assured Placements</h4>
+                                    <p class="fw-normal">Apart from practical training, we prepare our trainees for
+                                        interviews and propose applications
+                                        to ensure the cracking of the right job opportunity..</p>
+                                </div>
+                            </div>
+                            <div class="col-lg-3 col-md-6 col-12">
+                                <div class="choose-card text-center mb-3">
+                                    <div class="choose-icon">
+                                        <img src="./assets/images/art.png" class="img-fluid" alt="choose-icon"
+                                            width="100" height="100">
+                                    </div>
+                                    <h4 class="fw-semibold fs-5 text-capitalize"> State of the art facility</h4>
+                                    <p class="fw-normal"> We provide our trainees with the latest tools and technology
+                                        to help them get complete know-how
+                                        of the Advanced and modern marketing tools. Our state of the Art facility makes
+                                        them
+                                        market-ready in all ways.</p>
+                                </div>
+                            </div>
+                            <div class="col-lg-3 col-md-6 col-12">
+                                <div class="choose-card text-center mb-3">
+                                    <div class="choose-icon">
+                                        <img src="./assets/images/fee.png" class="img-fluid" alt="choose-icon"
+                                            width="100" height="100">
+                                    </div>
+                                    <h4 class="fw-semibold fs-5 text-capitalize">Affordable Fee</h4>
+                                    <p class="fw-normal">The courses are designed with a reasonable fee structure to
+                                        ensure that all fresh talents get an
+                                        opportunity to gain practical exposure and exercise their skills in the best way
+                                        possible in the
+                                        industry.</p>
+                                </div>
+                            </div>
+                            <div class="col-lg-3 col-md-6 col-12">
+                                <div class="choose-card text-center mb-3">
+                                    <div class="choose-icon">
+                                        <img src="./assets/images/company.png" class="img-fluid" alt="choose-icon"
+                                            width="100" height="100">
+                                    </div>
+                                    <h4 class="fw-semibold fs-5 text-capitalize">Placement Association with 100+ Companies</h4>
+                                    <p class="fw-normal">We are associated with 100+ IT companies as their recruitment
+                                        partner and help them in hiring
+                                        entry-level talented programmers. If you are good at your job, we have secured a
+                                        job opportunity
+                                        for you</p>
+                                </div>
+                            </div>
+                            <div class="col-lg-3 col-md-6 col-12">
+                                <div class="choose-card text-center mb-3">
+                                    <div class="choose-icon">
+                                        <img src="./assets/images/experts.png" class="img-fluid" alt="choose-icon"
+                                            width="100" height="100">
+                                    </div>
+                                    <h4 class="fw-semibold fs-5 text-capitalize">Backed by Industry Experts</h4>
+                                    <p class="fw-normal ">The Company was instituted in 2016 by some prominent IT industry experts. Each of the training
+                                        courses is designed meticulously under the supervision of influential figures in the IT world to
+                                        ensure the complete conversion of a fresher into a full-fledged IT Professional.</p>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
