Add you ar in the right place section

--- a/index.html
+++ b/index.html
@@ -254,7 +254,8 @@
                                         <img src="./assets/images/company.png" class="img-fluid" alt="choose-icon"
                                             width="100" height="100">
                                     </div>
-                                    <h4 class="fw-semibold fs-5 text-capitalize">Placement Association with 100+ Companies</h4>
+                                    <h4 class="fw-semibold fs-5 text-capitalize">Placement Association with 100+
+                                        Companies</h4>
                                     <p class="fw-normal">We are associated with 100+ IT companies as their recruitment
                                         partner and help them in hiring
                                         entry-level talented programmers. If you are good at your job, we have secured a
@@ -269,9 +270,12 @@
                                             width="100" height="100">
                                     </div>
                                     <h4 class="fw-semibold fs-5 text-capitalize">Backed by Industry Experts</h4>
-                                    <p class="fw-normal ">The Company was instituted in 2016 by some prominent IT industry experts. Each of the training
-                                        courses is designed meticulously under the supervision of influential figures in the IT world to
-                                        ensure the complete conversion of a fresher into a full-fledged IT Professional.</p>
+                                    <p class="fw-normal ">The Company was instituted in 2016 by some prominent IT
+                                        industry experts. Each of the training
+                                        courses is designed meticulously under the supervision of influential figures in
+                                        the IT world to
+                                        ensure the complete conversion of a fresher into a full-fledged IT Professional.
+                                    </p>
                                 </div>
                             </div>
                         </div>
@@ -280,6 +284,57 @@
             </div>
         </section>
 
+        <!-- right place -->
+
+        <section class="place">
+            <div class="container py-5">
+                <div class="row">
+                    <div class="col-12">
+                        <h2 class="display- text-center fw-bold pb-5">You are in the right place</h2>
+                    </div>
+                    <div class="col-12">
+                        <div class="row place-container m-2 ">
+                            <div class="col-lg-3 col-md-6 col-12">
+                                <div class="place-card">
+                                    <div class="place-icon">
+                                        <img src="./assets/images/Students.png" class="img-fluid" alt="place-icon">
+                                    </div>
+                                    <h4 class="fw-bold display-5">1000+</h4>
+                                    <p class="fw-semibold">Students </p>
+                                </div>
+                            </div>
+
+                            <div class="col-lg-3 col-md-6 col-12">
+                                <div class="place-card">
+                                    <div class="place-icon">
+                                        <img src="./assets/images/Placements-in-a-year.png" class="img-fluid" alt="place-icon">
+                                    </div>
+                                    <h4 class="fw-bold display-5">200+</h4>
+                                    <p class="fw-semibold">Placements in a year </p>
+                                </div>
+                            </div>
+
+                            <div class="col-lg-3 col-md-6 col-12">
+                                <div class="place-card">
+                                    <div class="place-icon">
+                                        <img src="./assets/images/trainess.png" class="img-fluid" alt="place-icon">
+                                    </div>
+                                    <h4 class="fw-bold display-5">25+</h4>
+                                    <p class="fw-semibold">Trainers </p>
+                                </div>
+                            </div>
+
+                            <div class="col-lg-3 col-md-6 col-12">
+                                <div class="place-card">
+                                    <div class="place-icon">
+                                        <img src="./assets/images/Courses.png" class="img-fluid" alt="place-icon">
+                                    </div>
+                                    <h4 class="fw-bold display-5">6+</h4>
+                                    <p class="fw-semibold">Years in the industry </p>
+                                </div>
+                            </div>
+                        </div>
+        </section>
 
 
         <script src="./assets/js/bootstrap.bundle.min.js"></script>
