Add course section

--- a/index.html
+++ b/index.html
@@ -307,7 +307,8 @@
                             <div class="col-lg-3 col-md-6 col-12">
                                 <div class="place-card">
                                     <div class="place-icon">
-                                        <img src="./assets/images/Placements-in-a-year.png" class="img-fluid" alt="place-icon">
+                                        <img src="./assets/images/Placements-in-a-year.png" class="img-fluid"
+                                            alt="place-icon">
                                     </div>
                                     <h4 class="fw-bold display-5">200+</h4>
                                     <p class="fw-semibold">Placements in a year </p>
@@ -334,6 +335,150 @@
                                 </div>
                             </div>
                         </div>
+        </section>
+
+        <!-- our courses -->
+        <section class="courses">
+            <div class="container py">
+                <div class="row">
+                    <div class="col-12">
+                        <h2 class="display-5 text-center fw-bold pb-5">Our Courses</h2>
+                    </div>
+                    <div class="col-12">
+                        <div class="row course-container d-flex justify-content-center align-items-center">
+                            <div class="col-lg-3  col-md-6 col-12">
+                                <div class="course-card">
+                                    <div class="course-icon">
+                                        <img src="./assets/images/django.png" class="img-fluid" alt="course-icon">
+                                    </div>
+                                    <h4 class="fw-semibold fs-5 text-uppercase">Python - Django Fullstack</h4>
+                                    <div class="div course-para">
+                                        <p class="fw-normal">Python is a high-level, object-oriented, and interpreted
+                                            programming language popular worldwide for its convenient machine learning
+                                            and
+                                            artificial intelligence.</p>
+                                    </div>
+                                    <button class="btn btn-linear view-more-btn">View More <i class=" bi-arrow-right ms-2">
+                                        </i></button>
+                                </div>
+                            </div>
+                            <div class="col-lg-3  col-md-6 col-12">
+                                <div class="course-card">
+                                    <div class="course-icon">
+                                        <img src="./assets/images/laravel.png" class="img-fluid" alt="course-icon">
+                                    </div>
+                                    <h4 class="fw-semibold fs-5 text-uppercase">Php-Laravel fullstack</h4>
+                                    <div class="div course-para">
+                                        <p class="fw-normal">PHP Laravel Full stack is a popular server-side programming
+                                            language mainly used for web development. It is an open-source scripting
+                                            language.</p>
+                                    </div>
+                                    <button class="btn btn-linear view-more-btn">View More <i class=" bi-arrow-right ms-2">
+                                        </i></button>
+                                </div>
+                            </div>
+                            <div class="col-lg-3  col-md-6 col-12">
+                                <div class="course-card">
+                                    <div class="course-icon">
+                                        <img src="./assets/images/mern.png" class="img-fluid" alt="course-icon">
+                                    </div>
+                                    <h4 class="fw-semibold fs-5 text-uppercase">Mern full stack</h4>
+                                    <div class="div course-para">
+                                        <p class="fw-normal">A Mern Full Stack course helps to build and deploy a social
+                                            network and use it to learn all about modern react, including hooks, context
+                                            API, MERN full stack and redux, with the help of real-life projects.</p>
+                                    </div>
+                                    <button class="btn btn-linear view-more-btn">View More <i class=" bi-arrow-right ms-2">
+                                        </i></button>
+                                </div>
+                            </div>
+                            <div class="col-lg-3  col-md-6 col-12">
+                                <div class="course-card">
+                                    <div class="course-icon">
+                                        <img src="./assets/images/flutter.png" class="img-fluid" alt="course-icon">
+                                    </div>
+                                    <h4 class="fw-semibold fs-5 text-uppercase">Flutter Mobile App</h4>
+                                    <div class="div course-para">
+                                        <p class="fw-normal">Flutter Mobile app works to bring your app idea to more
+                                            users
+                                            and works for iOS and Android without affecting the features, quality or
+                                            performance.</p>
+                                    </div>
+                                    <button class="btn btn-linear view-more-btn">View More <i class=" bi-arrow-right ms-2">
+                                        </i></button>
+                                </div>
+                            </div>
+                            <div class="col-lg-3  col-md-6 col-12">
+                                <div class="course-card">
+                                    <div class="course-icon">
+                                        <img src="./assets/images/react-1.png" class="img-fluid" alt="course-icon">
+                                    </div>
+                                    <h4 class="fw-semibold fs-5 text-uppercase"> React Js</h4>
+                                    <div class="div course-para">
+                                        <p class="fw-normal">React JS is one of the World’s most popular and valuable
+                                            JavaScript front-end libraries. It is developed in the labs of Facebook.
+                                            React
+                                            aids in curating apps with immense ease, scalability and strength.</p>
+                                    </div>
+                                    <button class="btn btn-linear view-more-btn">View More <i class=" bi-arrow-right ms-2">
+                                        </i></button>
+                                </div>
+                            </div>
+                            <div class="col-lg-3  col-md-6 col-12">
+                                <div class="course-card">
+                                    <div class="course-icon">
+                                        <img src="./assets/images/ui-ux.png" class="img-fluid" alt="course-icon">
+                                    </div>
+                                    <h4 class="fw-semibold fs-5 text-uppercase">ui/ux</h4>
+                                    <div class="div course-para">
+                                        <p class="fw-normal">A good UI/UX design can help maintain efficiency and create
+                                            satisfactory usability results that allow smooth customer and product or
+                                            service
+                                            interactions</p>
+                                    </div>
+                                    <button class="btn btn-linear view-more-btn">View More <i class=" bi-arrow-right ms-2">
+                                        </i></button>
+                                </div>
+                            </div>
+                            <div class="col-lg-3  col-md-6 col-12">
+                                <div class="course-card">
+                                    <div class="course-icon">
+                                        <img src="./assets/images/dm.png" class="img-fluid" alt="course-icon">
+                                    </div>
+                                    <h4 class="fw-semibold fs-5 text-uppercase">Digital Marketing Training in Kozhikode
+                                    </h4>
+                                    <div class="div course-para">
+                                        <p class="fw-normal">With the rise in online businesses, demand for skilled and
+                                            highly qualified digital marketing professionals who can bring the companies
+                                            online by executing optimal plans and tactics to generate more traffic and
+                                            ensure the speedy growth of the businesses</p>
+                                    </div>
+                                    <button class="btn btn-linear view-more-btn">View More <i class=" bi-arrow-right ms-2">
+                                        </i></button>
+                                </div>
+                            </div>
+                            <div class="col-lg-3  col-md-6 col-12">
+                                <div class="course-card">
+                                    <div class="course-icon">
+                                        <img src="./assets/images/front-end.png" class="img-fluid" alt="course-icon">
+                                    </div>
+                                    <h4 class="fw-semibold fs-5 text-uppercase">Front End Development</h4>
+                                    <div class="div course-para">
+                                        <p class="fw-normal">Front End Development is meant for those who like to learn
+                                            and
+                                            build Front-End Developers skills. The Course is not a single course but a
+                                            series of systems that help to master the skill.</p>
+                                    </div>
+                                    <button class="btn btn-linear view-more-btn">View More <i class=" bi-arrow-right ms-2">
+                                        </i></button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            </div>
+
         </section>
 
 
