Update course section

--- a/index.html
+++ b/index.html
@@ -19,60 +19,61 @@
 <body>
     <!-- whatsapp image in right bottom fixed -->
     <a href="https://wa.me/1234567890" target="_blank"
-        class="whatsapp position-fixed d-none d-lg-block bottom-0 end-0 m-5">
+        class="whatsapp position-fixed d-none d-lg-block bottom-0 end-0 m-5 z-3">
         <img src="./assets/images/whatsapp-icon.png" alt="whatsapp" width="50" height="50">
         <!-- header -->
-        <header ">
-        <div class=" container-fluid ">
-            <nav class=" fixed-top navbar navbar-expand-lg bg-body-tertiary px-2 py-3">
-            <div class="container-fluid">
-                <a class="navbar-brand" href="#">
-                    <img src="./assets/images/futura-labs.svg" alt="Futura Labs" width="150" height="auto">
-                </a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                    aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse fw-semibold" id="navbarSupportedContent">
-                    <ul class="navbar-nav ms-auto mb-2 mb-lg-0 d-flex justify-content-center align-items-center">
-                        <li class="nav-item">
-                            <a class="nav-link active pe-4" aria-current="page" href="#">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link pe-4" href="#">About</a>
-                        </li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle pe-4" href="#" role="button" data-bs-toggle="dropdown"
-                                aria-expanded="false">
-                                Internship
-                            </a>
-                            <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="#">Action</a></li>
-                                <li><a class="dropdown-item" href="#">Another action</a></li>
-                                <li>
-                                    <hr class="dropdown-divider">
+        <header>
+            <div class=" container-fluid ">
+                <nav class=" fixed-top navbar navbar-expand-lg bg-body-tertiary px-2 py-3">
+                    <div class="container-fluid">
+                        <a class="navbar-brand" href="#">
+                            <img src="./assets/images/futura-labs.svg" alt="Futura Labs" width="150" height="auto">
+                        </a>
+                        <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                            aria-expanded="false" aria-label="Toggle navigation">
+                            <span class="navbar-toggler-icon"></span>
+                        </button>
+                        <div class="collapse navbar-collapse fw-semibold" id="navbarSupportedContent">
+                            <ul
+                                class="navbar-nav ms-auto mb-2 mb-lg-0 d-flex justify-content-center align-items-center">
+                                <li class="nav-item">
+                                    <a class="nav-link active pe-4" aria-current="page" href="#">Home</a>
                                 </li>
-                                <li><a class="dropdown-item" href="#">Something else here</a></li>
+                                <li class="nav-item">
+                                    <a class="nav-link pe-4" href="#">About</a>
+                                </li>
+                                <li class="nav-item dropdown">
+                                    <a class="nav-link dropdown-toggle pe-4" href="#" role="button"
+                                        data-bs-toggle="dropdown" aria-expanded="false">
+                                        Internship
+                                    </a>
+                                    <ul class="dropdown-menu">
+                                        <li><a class="dropdown-item" href="#">Action</a></li>
+                                        <li><a class="dropdown-item" href="#">Another action</a></li>
+                                        <li>
+                                            <hr class="dropdown-divider">
+                                        </li>
+                                        <li><a class="dropdown-item" href="#">Something else here</a></li>
+                                    </ul>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link pe-4" href="#">Placements</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link pe-4" href="#">Careers</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link pe-4" href="#">Contact</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link pe-4 btn  btn-linear" href="#">Get In Touch <i
+                                            class="bi bi-arrow-right ms-2"></i></a>
+                                </li>
                             </ul>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link pe-4" href="#">Placements</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link pe-4" href="#">Careers</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link pe-4" href="#">Contact</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link pe-4 btn  btn-linear" href="#">Get In Touch <i
-                                    class="bi bi-arrow-right ms-2"></i></a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-            </nav>
+                        </div>
+                    </div>
+                </nav>
             </div>
 
 
@@ -358,7 +359,8 @@
                                             and
                                             artificial intelligence.</p>
                                     </div>
-                                    <button class="btn btn-linear view-more-btn">View More <i class=" bi-arrow-right ms-2">
+                                    <button class="btn btn-linear view-more-btn">View More <i
+                                            class=" bi-arrow-right ms-2">
                                         </i></button>
                                 </div>
                             </div>
@@ -373,7 +375,8 @@
                                             language mainly used for web development. It is an open-source scripting
                                             language.</p>
                                     </div>
-                                    <button class="btn btn-linear view-more-btn">View More <i class=" bi-arrow-right ms-2">
+                                    <button class="btn btn-linear view-more-btn">View More <i
+                                            class=" bi-arrow-right ms-2">
                                         </i></button>
                                 </div>
                             </div>
@@ -388,7 +391,8 @@
                                             network and use it to learn all about modern react, including hooks, context
                                             API, MERN full stack and redux, with the help of real-life projects.</p>
                                     </div>
-                                    <button class="btn btn-linear view-more-btn">View More <i class=" bi-arrow-right ms-2">
+                                    <button class="btn btn-linear view-more-btn">View More <i
+                                            class=" bi-arrow-right ms-2">
                                         </i></button>
                                 </div>
                             </div>
@@ -404,7 +408,8 @@
                                             and works for iOS and Android without affecting the features, quality or
                                             performance.</p>
                                     </div>
-                                    <button class="btn btn-linear view-more-btn">View More <i class=" bi-arrow-right ms-2">
+                                    <button class="btn btn-linear view-more-btn">View More <i
+                                            class=" bi-arrow-right ms-2">
                                         </i></button>
                                 </div>
                             </div>
@@ -420,7 +425,8 @@
                                             React
                                             aids in curating apps with immense ease, scalability and strength.</p>
                                     </div>
-                                    <button class="btn btn-linear view-more-btn">View More <i class=" bi-arrow-right ms-2">
+                                    <button class="btn btn-linear view-more-btn">View More <i
+                                            class=" bi-arrow-right ms-2">
                                         </i></button>
                                 </div>
                             </div>
@@ -436,7 +442,8 @@
                                             service
                                             interactions</p>
                                     </div>
-                                    <button class="btn btn-linear view-more-btn">View More <i class=" bi-arrow-right ms-2">
+                                    <button class="btn btn-linear view-more-btn">View More <i
+                                            class=" bi-arrow-right ms-2">
                                         </i></button>
                                 </div>
                             </div>
@@ -453,7 +460,8 @@
                                             online by executing optimal plans and tactics to generate more traffic and
                                             ensure the speedy growth of the businesses</p>
                                     </div>
-                                    <button class="btn btn-linear view-more-btn">View More <i class=" bi-arrow-right ms-2">
+                                    <button class="btn btn-linear view-more-btn">View More <i
+                                            class=" bi-arrow-right ms-2">
                                         </i></button>
                                 </div>
                             </div>
@@ -469,7 +477,8 @@
                                             build Front-End Developers skills. The Course is not a single course but a
                                             series of systems that help to master the skill.</p>
                                     </div>
-                                    <button class="btn btn-linear view-more-btn">View More <i class=" bi-arrow-right ms-2">
+                                    <button class="btn btn-linear view-more-btn">View More <i
+                                            class=" bi-arrow-right ms-2">
                                         </i></button>
                                 </div>
                             </div>
