--- a/index.html
+++ b/index.html
@@ -491,6 +491,52 @@
         </section>
 
 
+        <!-- contact section -->
+        <section class="contact">
+            <div class="container py-5">
+                <div class="row">
+                    <div class="col-md-6">
+                        <h4 class="fw-semibold pb-3">Talk to our advisor</h4>
+                        <form class="row g-3">
+                            <div class="col-md-6">
+                                <label for="inputEmail4" class="form-label">Your Name</label>
+                                <input type="text" class="form-control" id="inputEmail4">
+                            </div>
+                            <div class="col-md-6">
+                                <label for="inputPassword4" class="form-label">Contact No</label>
+                                <input type="text" class="form-control" id="inputPassword4">
+                            </div>
+                            <div class="col-md-6">
+                                <label for="inputEmail4" class="form-label">Email</label>
+                                <input type="email" class="form-control" id="inputEmail4">
+                            </div>
+                            <div class="col-md-6">
+                                <label for="inputPassword4" class="form-label"> Subject</label>
+                                <input type="text" class="form-control" id="inputPassword4">
+                            </div>
+                            <div class="form-floating col-md-12">
+                                <textarea class="form-control" placeholder="Leave a comment here" id="floatingTextarea2"
+                                    style="height: 100px"></textarea>
+                                <label for="floatingTextarea2">Comments</label>
+                            </div>
+                            <div class="col-12 mt-3">
+                                <button type="submit" class="btn btn-linear fs-5">Submit <i
+                                        class="bi bi-arrow-right ms-2"></i> </button>
+                            </div>
+                        </form>
+                    </div>
+                    <div class="col-md-6 mt-2">
+                        <iframe
+                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3912.9527432740147!2d75.77676331062774!3d11.264884188868868!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ba65ec97483c521%3A0x897b1662e5074c01!2sFutura%20Labs!5e0!3m2!1sen!2sin!4v1710819495482!5m2!1sen!2sin"
+                            width="100%" height="400" style="border:0;" allowfullscreen="" loading="lazy"
+                            referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+
+
         <script src="./assets/js/bootstrap.bundle.min.js"></script>
 </body>
 
